Bug 51534 - Ruler background doesn't change according to application background setting
Summary: Ruler background doesn't change according to application background setting
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
3.6.0.0.beta2
Hardware: All All
: medium minor
Assignee: Not Assigned
URL:
Whiteboard: target:4.4.0 target:4.3.1
Keywords:
: 51374 81863 (view as bug list)
Depends on:
Blocks: mab4.3
  Show dependency treegraph
 
Reported: 2012-06-28 13:37 UTC by Stefan Knorr
Modified: 2015-05-02 13:02 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
actual screenshot (93.30 KB, image/png)
2012-06-28 13:37 UTC, Stefan Knorr
Details
expected look (91.92 KB, image/png)
2012-06-28 13:49 UTC, Stefan Knorr
Details
ruler-area color not the same as toolbars-area color (51.24 KB, image/png)
2013-03-21 21:59 UTC, Mirosław Zalewski
Details
yellow background (130.91 KB, image/png)
2014-09-01 13:15 UTC, nomnex
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Stefan Knorr 2012-06-28 13:37:28 UTC
Created attachment 63578 [details]
actual screenshot

Since LibO 3.6, the rulers in Writer don't have black frames around them any more – with the standard background setting, they are "merging" with the application background.
When setting the background colour to something else, however, it becomes apparent that the ruler background just coincides with the application background.

In the screenshot, the application background has been changed to bright red.

(This is on LibO 3.6 beta 2, Windows 7 & Ubuntu 12.04)
Comment 1 Stefan Knorr 2012-06-28 13:49:16 UTC
Created attachment 63579 [details]
expected look

Adding screenshot of expected look.

Forgot to mention how to set the application background to a different colour: go to Tools > Options, select Appearance, change the colour for Application background.
Comment 2 mike.hall 2012-12-03 09:38:21 UTC
Tested with 3.6.3.2 on Vista. Agree that the background should extend around the rulers as per second attachment. Probably a regression as claimed, but have not tested that.
Comment 3 Rainer Bielefeld Retired 2013-01-07 06:49:56 UTC
For me the current look (showing the same dolor around rulers as around Styles area and Navigator is plausible. 

@Astron
Is there a cogent reason that the rulers fram should have application background color?
Comment 4 Mirosław Zalewski 2013-03-21 21:59:50 UTC
Created attachment 76880 [details]
ruler-area color not the same as toolbars-area color

@Rainer: because ruler-area color is not always the same as toolbars-area color. Take a look at attached screenshot. We can see three different colors here - one for toolbars background, one for rulers background and one for application background.
I wonder how would it look in 4.0 with Personas under toolbars...

Since rulers are visually separated from toolbars, I believe that using the same color for application background and ruler-area background would be good change.
Comment 5 Joel Madero 2014-02-27 22:55:22 UTC
In order to limit the confusion between ProposedEasyHack and EasyHack and to make queries much easier we are changing ProposedEasyHack to NeedsDevEval.

Thank you and apologies for the noise
Comment 6 Michael Meeks 2014-07-24 18:21:51 UTC
Soo ... we want to remove a setting for a separate ruler background, and re-use the app background for these rulers ?

Unfortunately the swruler.cxx -> svx/ruler.hxx -> svtools/ruler.hxx: rather a pile of code in this regard.

I assume that svtools/source/ruler.cxx:

void Ruler::ImplInitSettings( bool bFont, bool bForeground, bool bBackground )

is the code that gets this sorted out; as such I guess we need to call:

void Window::SetControlBackground( const Color& rColor )

on this guy; or switch:

            aColor = rStyleSettings.GetDialogColor();

to something more fun.

Anyhow - I have pushed a patch to master; most probably it breaks every non-document related use of a ruler but ... lets see. Worth checking out the report designer etc.

Also - *honestly* this was not a MAB, nor is it a regression AFAICS. No idea how we went from easy hack to 4.3 MAB [!].
Comment 7 Commit Notification 2014-07-24 18:26:16 UTC
Michael Meeks committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=b0cdd038ee192dcc0d83182a33fc8c0242ceb1dd

fdo#51534 - rulers should have app-background by default (apparently).



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2014-07-24 20:10:14 UTC
Michael Meeks committed a patch related to this issue.
It has been pushed to "libreoffice-4-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e0a7557e97de0bad7ff8510c768bdbed6cdae6f5&h=libreoffice-4-3

fdo#51534 - rulers should have app-background by default (apparently).


It will be available in LibreOffice 4.3.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 9 fuer_kommentare 2014-07-29 13:04:31 UTC
*** Bug 81863 has been marked as a duplicate of this bug. ***
Comment 10 Adolfo Jayme Barrientos 2014-08-08 15:43:35 UTC
Verified; it looks awesome. Thanks, Michael!
Comment 11 nomnex 2014-09-01 13:15:42 UTC
Created attachment 105561 [details]
yellow background

Can you tell? I just installed 4.3.1 to see the GUI change, and it does not work for me. It behaves exactly like 4.3.0.
Comment 12 retired 2014-09-02 17:52:21 UTC
REOPEN, confirmed comment11 observation.
Change LO background color but rulers stay white and do not adjust color.
Rulers are white by default and background is lightgrey. So initial assumption that rulers do match application background color, seems to be false.

Correct me, if I'm off here.
Comment 13 Maxim Monastirsky 2014-09-04 08:38:19 UTC
nomnex, foss: It does work for me if I close & reopen Writer. Can you retest please?
Comment 14 Maxim Monastirsky 2014-09-04 19:31:54 UTC
*** Bug 51374 has been marked as a duplicate of this bug. ***
Comment 15 retired 2014-09-04 23:24:14 UTC
Got it. Writer indeed has to be closed and re-opened. Can this be tweaked?

When adjusting the LO background color, it instantly changes in Writer except for the rulers. That is rather confusing behavior and should be improved before we close this bug - my 2 cent.

Also I was confused that the rulers themselves stay white but maybe to adjust the inside color of the rulers another color setting has to be switched.
Comment 16 Adolfo Jayme Barrientos 2014-09-05 04:19:48 UTC
(In reply to comment #15)
> Got it. Writer indeed has to be closed and re-opened. Can this be tweaked?

Please file another bug report. This one (at least its original form) is fixed. Resist the urge to cramp the whole lot of related issues into one report, otherwise the close > reopen > close > reopen cycle would be infinite.
Comment 17 retired 2014-09-05 09:13:01 UTC
Agreed. Here is https://www.libreoffice.org/bugzilla/show_bug.cgi?id=83523