fdo#51534 - rulers should have app-background by default (apparently).

Change-Id: I981febb02074ed323732ef7c19e89f1e946604f1